More suggestions on possible approaches

--- a/task-1/aml-task1.ipynb
+++ b/task-1/aml-task1.ipynb
@@ -736,7 +736,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Should test either PCA or LASSO selection"
+    "# Should test either PCA or LASSO selection\n",
+    "# Irrelevant because highly correlated features w/ other features"
    ]
   },
   {
