--- a/task-1/aml-task1.ipynb
+++ b/task-1/aml-task1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "60c096f1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.linear_model import Lasso\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8fbbb12c",
    "metadata": {},
    "outputs": [],
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f7e49fb6",
    "metadata": {},
    "outputs": [],
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fc64ae57",
    "metadata": {},
    "outputs": [
@@ -484,326 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "81b93706",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>x0</th>\n",
-       "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
-       "      <th>x3</th>\n",
-       "      <th>x4</th>\n",
-       "      <th>x5</th>\n",
-       "      <th>x6</th>\n",
-       "      <th>x7</th>\n",
-       "      <th>x8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>x822</th>\n",
-       "      <th>x823</th>\n",
-       "      <th>x824</th>\n",
-       "      <th>x825</th>\n",
-       "      <th>x826</th>\n",
-       "      <th>x827</th>\n",
-       "      <th>x828</th>\n",
-       "      <th>x829</th>\n",
-       "      <th>x830</th>\n",
-       "      <th>x831</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1212.000000</td>\n",
-       "      <td>1114.000000</td>\n",
-       "      <td>1114.000000</td>\n",
-       "      <td>1117.000000</td>\n",
-       "      <td>1106.000000</td>\n",
-       "      <td>1.113000e+03</td>\n",
-       "      <td>1124.000000</td>\n",
-       "      <td>1105.000000</td>\n",
-       "      <td>1112.000000</td>\n",
-       "      <td>1.114000e+03</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.134000e+03</td>\n",
-       "      <td>1119.000000</td>\n",
-       "      <td>1082.000000</td>\n",
-       "      <td>1121.000000</td>\n",
-       "      <td>1116.000000</td>\n",
-       "      <td>1104.000000</td>\n",
-       "      <td>1111.000000</td>\n",
-       "      <td>1.112000e+03</td>\n",
-       "      <td>1122.000000</td>\n",
-       "      <td>1091.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>605.500000</td>\n",
-       "      <td>10.031815</td>\n",
-       "      <td>832442.859290</td>\n",
-       "      <td>20585.524887</td>\n",
-       "      <td>1048.958235</td>\n",
-       "      <td>9.997403e+05</td>\n",
-       "      <td>10.095741</td>\n",
-       "      <td>597900.429955</td>\n",
-       "      <td>10384.604308</td>\n",
-       "      <td>1.000508e+06</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.049674e+06</td>\n",
-       "      <td>-873.888922</td>\n",
-       "      <td>13475.529768</td>\n",
-       "      <td>10.554762</td>\n",
-       "      <td>10.063086</td>\n",
-       "      <td>1062.330882</td>\n",
-       "      <td>10.014184</td>\n",
-       "      <td>1.050199e+06</td>\n",
-       "      <td>99744.739551</td>\n",
-       "      <td>104903.905758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>350.018571</td>\n",
-       "      <td>0.952412</td>\n",
-       "      <td>0.028258</td>\n",
-       "      <td>0.029051</td>\n",
-       "      <td>28.430733</td>\n",
-       "      <td>9.575047e+04</td>\n",
-       "      <td>0.952838</td>\n",
-       "      <td>0.028128</td>\n",
-       "      <td>1533.281037</td>\n",
-       "      <td>1.011149e+05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.839579e+04</td>\n",
-       "      <td>158.941968</td>\n",
-       "      <td>2287.977831</td>\n",
-       "      <td>0.283844</td>\n",
-       "      <td>0.965268</td>\n",
-       "      <td>219.693076</td>\n",
-       "      <td>1.002212</td>\n",
-       "      <td>2.814210e+04</td>\n",
-       "      <td>9499.490407</td>\n",
-       "      <td>2768.405350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7.386467</td>\n",
-       "      <td>832442.808579</td>\n",
-       "      <td>20585.473808</td>\n",
-       "      <td>1000.063783</td>\n",
-       "      <td>7.134584e+05</td>\n",
-       "      <td>7.374832</td>\n",
-       "      <td>597900.381003</td>\n",
-       "      <td>5856.916464</td>\n",
-       "      <td>6.938138e+05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000105e+06</td>\n",
-       "      <td>-1358.504650</td>\n",
-       "      <td>6102.603752</td>\n",
-       "      <td>10.010366</td>\n",
-       "      <td>7.119066</td>\n",
-       "      <td>496.007706</td>\n",
-       "      <td>7.124319</td>\n",
-       "      <td>1.000002e+06</td>\n",
-       "      <td>73207.994891</td>\n",
-       "      <td>100012.896777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>302.750000</td>\n",
-       "      <td>9.387002</td>\n",
-       "      <td>832442.835941</td>\n",
-       "      <td>20585.501013</td>\n",
-       "      <td>1024.969967</td>\n",
-       "      <td>9.360882e+05</td>\n",
-       "      <td>9.480908</td>\n",
-       "      <td>597900.406110</td>\n",
-       "      <td>9342.322255</td>\n",
-       "      <td>9.333593e+05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.025054e+06</td>\n",
-       "      <td>-974.539060</td>\n",
-       "      <td>11973.529709</td>\n",
-       "      <td>10.321039</td>\n",
-       "      <td>9.384448</td>\n",
-       "      <td>898.814832</td>\n",
-       "      <td>9.327552</td>\n",
-       "      <td>1.027575e+06</td>\n",
-       "      <td>93353.475618</td>\n",
-       "      <td>102596.190683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>605.500000</td>\n",
-       "      <td>10.000238</td>\n",
-       "      <td>832442.860041</td>\n",
-       "      <td>20585.524817</td>\n",
-       "      <td>1047.985497</td>\n",
-       "      <td>1.000204e+06</td>\n",
-       "      <td>10.092262</td>\n",
-       "      <td>597900.429787</td>\n",
-       "      <td>10294.513948</td>\n",
-       "      <td>1.001551e+06</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.049296e+06</td>\n",
-       "      <td>-875.282164</td>\n",
-       "      <td>13344.014198</td>\n",
-       "      <td>10.554260</td>\n",
-       "      <td>10.114853</td>\n",
-       "      <td>1046.544302</td>\n",
-       "      <td>10.006051</td>\n",
-       "      <td>1.050262e+06</td>\n",
-       "      <td>99788.045703</td>\n",
-       "      <td>104846.235709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>908.250000</td>\n",
-       "      <td>10.664998</td>\n",
-       "      <td>832442.882951</td>\n",
-       "      <td>20585.550525</td>\n",
-       "      <td>1073.180317</td>\n",
-       "      <td>1.064208e+06</td>\n",
-       "      <td>10.753969</td>\n",
-       "      <td>597900.452983</td>\n",
-       "      <td>11290.582019</td>\n",
-       "      <td>1.068538e+06</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.074354e+06</td>\n",
-       "      <td>-773.110258</td>\n",
-       "      <td>14866.524645</td>\n",
-       "      <td>10.792195</td>\n",
-       "      <td>10.745370</td>\n",
-       "      <td>1212.308886</td>\n",
-       "      <td>10.658120</td>\n",
-       "      <td>1.073831e+06</td>\n",
-       "      <td>106381.225714</td>\n",
-       "      <td>107098.669350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1211.000000</td>\n",
-       "      <td>12.823188</td>\n",
-       "      <td>832442.908334</td>\n",
-       "      <td>20585.573514</td>\n",
-       "      <td>1099.977638</td>\n",
-       "      <td>1.269429e+06</td>\n",
-       "      <td>12.747734</td>\n",
-       "      <td>597900.480810</td>\n",
-       "      <td>15301.046949</td>\n",
-       "      <td>1.284804e+06</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.099771e+06</td>\n",
-       "      <td>-385.409876</td>\n",
-       "      <td>21045.469556</td>\n",
-       "      <td>11.091050</td>\n",
-       "      <td>12.938419</td>\n",
-       "      <td>1741.061368</td>\n",
-       "      <td>12.986906</td>\n",
-       "      <td>1.099918e+06</td>\n",
-       "      <td>124004.941970</td>\n",
-       "      <td>109984.169649</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 833 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                id           x0             x1            x2           x3  \\\n",
-       "count  1212.000000  1114.000000    1114.000000   1117.000000  1106.000000   \n",
-       "mean    605.500000    10.031815  832442.859290  20585.524887  1048.958235   \n",
-       "std     350.018571     0.952412       0.028258      0.029051    28.430733   \n",
-       "min       0.000000     7.386467  832442.808579  20585.473808  1000.063783   \n",
-       "25%     302.750000     9.387002  832442.835941  20585.501013  1024.969967   \n",
-       "50%     605.500000    10.000238  832442.860041  20585.524817  1047.985497   \n",
-       "75%     908.250000    10.664998  832442.882951  20585.550525  1073.180317   \n",
-       "max    1211.000000    12.823188  832442.908334  20585.573514  1099.977638   \n",
-       "\n",
-       "                 x4           x5             x6            x7            x8  \\\n",
-       "count  1.113000e+03  1124.000000    1105.000000   1112.000000  1.114000e+03   \n",
-       "mean   9.997403e+05    10.095741  597900.429955  10384.604308  1.000508e+06   \n",
-       "std    9.575047e+04     0.952838       0.028128   1533.281037  1.011149e+05   \n",
-       "min    7.134584e+05     7.374832  597900.381003   5856.916464  6.938138e+05   \n",
-       "25%    9.360882e+05     9.480908  597900.406110   9342.322255  9.333593e+05   \n",
-       "50%    1.000204e+06    10.092262  597900.429787  10294.513948  1.001551e+06   \n",
-       "75%    1.064208e+06    10.753969  597900.452983  11290.582019  1.068538e+06   \n",
-       "max    1.269429e+06    12.747734  597900.480810  15301.046949  1.284804e+06   \n",
-       "\n",
-       "       ...          x822         x823          x824         x825         x826  \\\n",
-       "count  ...  1.134000e+03  1119.000000   1082.000000  1121.000000  1116.000000   \n",
-       "mean   ...  1.049674e+06  -873.888922  13475.529768    10.554762    10.063086   \n",
-       "std    ...  2.839579e+04   158.941968   2287.977831     0.283844     0.965268   \n",
-       "min    ...  1.000105e+06 -1358.504650   6102.603752    10.010366     7.119066   \n",
-       "25%    ...  1.025054e+06  -974.539060  11973.529709    10.321039     9.384448   \n",
-       "50%    ...  1.049296e+06  -875.282164  13344.014198    10.554260    10.114853   \n",
-       "75%    ...  1.074354e+06  -773.110258  14866.524645    10.792195    10.745370   \n",
-       "max    ...  1.099771e+06  -385.409876  21045.469556    11.091050    12.938419   \n",
-       "\n",
-       "              x827         x828          x829           x830           x831  \n",
-       "count  1104.000000  1111.000000  1.112000e+03    1122.000000    1091.000000  \n",
-       "mean   1062.330882    10.014184  1.050199e+06   99744.739551  104903.905758  \n",
-       "std     219.693076     1.002212  2.814210e+04    9499.490407    2768.405350  \n",
-       "min     496.007706     7.124319  1.000002e+06   73207.994891  100012.896777  \n",
-       "25%     898.814832     9.327552  1.027575e+06   93353.475618  102596.190683  \n",
-       "50%    1046.544302    10.006051  1.050262e+06   99788.045703  104846.235709  \n",
-       "75%    1212.308886    10.658120  1.073831e+06  106381.225714  107098.669350  \n",
-       "max    1741.061368    12.986906  1.099918e+06  124004.941970  109984.169649  \n",
-       "\n",
-       "[8 rows x 833 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_abs_z_scores = np.abs(zscore(X_train, nan_policy='omit'))\n",
-    "X_train_no_outliers_df = X_train[(X_train_abs_z_scores < 3)]\n",
-    "X_train_no_outliers_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "4d07f2ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8154747047333785\n"
-     ]
-    }
-   ],
-   "source": [
-    "old_nb_na = X_train.isna().sum().sum()\n",
-    "new_nb_na = X_train_no_outliers_df.isna().sum().sum()\n",
-    "nb_outliers = new_nb_na - old_nb_na\n",
-    "print(nb_outliers / (X_train.shape[0] * X_train.shape[1]) * 100)"
+    "X_train = X_train[(X_train_abs_z_scores < 3)]"
    ]
   },
   {
@@ -816,95 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "18b3ce52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1212.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>69.665842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>9.831347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>42.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>64.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>70.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>76.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>97.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 y\n",
-       "count  1212.000000\n",
-       "mean     69.665842\n",
-       "std       9.831347\n",
-       "min      42.000000\n",
-       "25%      64.000000\n",
-       "50%      70.000000\n",
-       "75%      76.000000\n",
-       "max      97.000000"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.drop(columns=['id']).describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "10f92b82",
    "metadata": {
     "scrolled": true
@@ -913,10 +513,11 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('imputer', KNNImputer()), ('lasso', Lasso(max_iter=100000))])"
+       "Pipeline(steps=[('imputer', KNNImputer()), ('scaler', StandardScaler()),\n",
+       "                ('lasso', Lasso(alpha=0.1, max_iter=100000))])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,23 +525,25 @@
    "source": [
     "# Should test imputing with mean or k-nearest neighbours\n",
     "# Use sklearn imputers and pipelines, cleaner than using pandas (I think, maybe? Since it's ML pipeline)\n",
-    "pipe = Pipeline([('imputer', KNNImputer()), ('lasso', Lasso(max_iter=100000))])\n",
+    "pipe = Pipeline([('imputer', KNNImputer()),\n",
+    "                 ('scaler', StandardScaler()), \n",
+    "                 ('lasso', Lasso(alpha=0.1, max_iter=100000))])\n",
     "pipe.fit(X_train.drop(columns=['id']), y_train.drop(columns=['id']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "6b2eb360",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6686317135128312"
+       "0.710793441761512"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "id": "84041ced",
    "metadata": {},
    "outputs": [],
@@ -960,7 +563,7 @@
     "result['id'] = range(len(result))\n",
     "result = result.rename(columns={0: 'y'})\n",
     "result = result[['id', 'y']]\n",
-    "result.to_csv('task1-sub0.csv', index=False)"
+    "result.to_csv('task1-sub1.csv', index=False)"
    ]
   },
   {
