--- a/task-1/aml-task1-Cleaner_notebook.ipynb
+++ b/task-1/aml-task1-Cleaner_notebook.ipynb
@@ -92,9 +92,9 @@
    "outputs": [],
    "source": [
     "def export_csv(X_train_cleaned, y_train_cleaned, X_test_cleaned):\n",
-    "    X_train_cleaned.to_csv('X_train_cleaned.csv', index=False)\n",
-    "    y_train_cleaned.to_csv('y_train_cleaned.csv', index=False)\n",
-    "    X_test_cleaned.to_csv('X_test_cleaned.csv', index=False)"
+    "    X_train_cleaned.to_csv('data/X_train_cleaned.csv', index=False)\n",
+    "    y_train_cleaned.to_csv('data/y_train_cleaned.csv', index=False)\n",
+    "    X_test_cleaned.to_csv('data/X_test_cleaned.csv', index=False)"
    ]
   },
   {
@@ -2952,7 +2952,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2966,7 +2966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
