--- a/task-2/aml-task2-antoine.ipynb
+++ b/task-2/aml-task2-antoine.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f126d6e1",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6dc16cc7",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "acdf2170",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "910612cf",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d3acf5a2",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fdd8ab55",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b98a4871",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "11deacd7",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4d47da7b",
    "metadata": {},
    "outputs": [],
@@ -214,6 +214,9 @@
     "    rr_durations = [r2 - r1 for r1, r2 in zip(rpeaks, rpeaks[1:])]\n",
     "    qrs_durations = [speak - qpeak for qpeak, speak in zip(qpeaks, speaks)]\n",
     "    \n",
+    "    # Extract RR differences\n",
+    "    rr_differences = [rr2 - rr1 for rr1, rr2 in zip(rr_durations, rr_durations[1:])]\n",
+    "    \n",
     "    # Extract QRS direction features\n",
     "    qrs_direction = [q + r + s for q, r, s in zip(qpeaks, rpeaks, speaks)]\n",
     "    \n",
@@ -228,12 +231,15 @@
     "    # Extract pNN28 (https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1767394/)\n",
     "    pNN28 = (np.array(rr_durations) * index_to_time > 0.028).sum() / len(rr_durations)\n",
     "    \n",
+    "    # Extract log(RMSSD) (log of root mean square successive differences, linked to heart rate variability (HRV))\n",
+    "    logRMSSD = np.log(np.sqrt(np.mean(np.array(rr_differences) ** 2)))\n",
+    "    \n",
     "    ecg_features = extract_stats_from([\n",
     "        rpeaks_amplitude, qpeaks_amplitude, speaks_amplitude,\n",
-    "        rr_durations, qrs_durations, qrs_direction, qr_ratio\n",
+    "        rr_durations, qrs_durations, rr_differences, qrs_direction, qr_ratio\n",
     "    ])\n",
     "    \n",
-    "    return ecg_features.append(pd.Series([snr, pNN28]), ignore_index=True)"
+    "    return ecg_features.append(pd.Series([snr, pNN28, logRMSSD]), ignore_index=True)"
    ]
   },
   {
